--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Crochet Studio</title>
+<title>Crowchet Studio</title>
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
 <style>
 :root {
@@ -236,7 +236,7 @@ header p {
 
 <!-- Landing Section -->
 <header>
-  <h1>Crochet Studio</h1>
+  <h1>Crowchet Studio</h1>
   <p>Handmade crochet creations crafted with love and care for you.</p>
 </header>
 
